<resources>
    <string name="app_name">Bookyue</string>
    <!-- actionbar -->
    <string name="bookshelf">书架</string>
    <string name="community">社区</string>
    <string name="discovery">发现</string>
    <string name="mine">我的</string>

    <string name="book_cover">图书封面</string>

    <string name="network_cannot_connect">网络无法连接，请前往设置</string>
    <string name="setting">设置</string>
    <string name="no_update">你追的小说暂无更新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="add_books">请先添加书籍</string>
    <string name="add_local_book">添加本地书籍</string>

    <!-- menu -->
    <string name="layout_switch">布局切换</string>
    <string name="night_mode">夜间模式</string>

    <!-- chapter  -->
    <string name="directory">目录</string>

    <!-- read_view_bottom_item -->
    <string name="night">夜间</string>
    <string name="cache">缓存</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>

    <!-- book_detail -->
    <string name="book_detail">书籍详情</string>
    <string name="cache_book">缓存书籍</string>
    <string name="share">分享</string>
    <string name="add_update">+加追新</string>
    <string name="cancel_update">-不追了</string>
    <string name="start_read">开始阅读</string>
    <string name="lately_follower">追书人数</string>
    <string name="reader_retention_rates">读者留存率</string>
    <string name="serialize_word_count">日更新字数</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
