<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/red">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/previous_chapter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/previous_chapter"
            android:textColor="@color/white"
            android:gravity="end|center_vertical"
            android:layout_marginEnd="10dp"/>

        <SeekBar
            android:id="@+id/chapter_seek_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:progressDrawable="@drawable/seek_bar_style"
            android:thumb="@drawable/seek_bar_thumb"/>

        <TextView
            android:id="@+id/next_chapter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next_chapter"
            android:textColor="@color/white"
            android:gravity="start|center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/directory_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/directory"
            android:drawableTop="@drawable/ic_directory_list_white_24dp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/night_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/night"
            android:drawableTop="@drawable/ic_night_white_24dp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/cache_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cache"
            android:drawableTop="@drawable/ic_download_white_24dp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/settings_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting"
            android:drawableTop="@drawable/ic_settings_white_24dp"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>